--- a/assets/css/main_admin.css
+++ b/assets/css/main_admin.css
@@ -9,14 +9,13 @@
     background-color: #f6f6f6;
 }
 
-.container {
+/* .container {
     background-color: #222d32;
     width: 300px;
     height: 739px;
-    /* width: 20%;
-    height: 739px; */
+
     overflow: auto;
-}
+} */
 
 .name {
     display: flex;
@@ -35,8 +34,17 @@
 .name__fullname--text {
     font-size: 1.6rem;
     font-weight: bold;
+    color: #fff;
 }
-
+.navbar_container{
+    background-color: #222d32;
+}
+.navbar__information ul{
+    padding: 0;
+}
+.navbar__information--list{
+    margin: 0;
+}
 .navbar__title {
     background-color: #000;
     font-size: 1.2rem;
@@ -44,12 +52,14 @@
     height: 60px;
     line-height: 60px;
     text-align: center;
+    color: #fff;
 }
 
 .information__list--items {
     display: inline-block;
     font-size: 1.2rem;
-    padding: 20px 0 20px 40px ;
+    padding: 20px 0 20px 30px ;
+    color: #fff;
 }
 
 .information__list--items:hover {
@@ -81,7 +91,7 @@
 }
 
 .change__information--items {
-    padding: 20px 0 0 10px;
+    padding: 20px 0 0 0px;
 }
 
 .information__list--items__text  a {
@@ -109,29 +119,25 @@
     color: black
 }
 
-.account__acc--info {
-    margin-top: 30px;
-}
-
 .account__infor {
     background-color: #ccc;
-    width: 1000px;
-    height: 460px;
+    width: 100%;
     margin-top: 20px;
-    margin-left: 140px;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px;
+}
+.account__infor > div{
+    width: 100%;
 }
 
 input {
-    padding: 8px;
-    margin: 10px 0;
-    border-radius: 10px;
-    width: 800px;
-    /* background-color:#D9D9D9; */
+    padding: 8.8px;
+    /* margin: 5px 0; */
+    /* border-radius: 10px; */
+    width: 100%;
     background-color: #fff;
 }
 
@@ -139,15 +145,10 @@ input {
     display: flex;
     justify-content: space-between;
 }
-
-.infor__list--birth__input, .infor__list--gender__input {
-    width: 350px;
+.infor__list--birth,
+.infor__list--gender{
+    flex: 0.49;
 }
-
-.infor__list--birth__input {
-    margin-right: 80px;
-}
-
 
 .information {
     display: none;
@@ -167,9 +168,6 @@ input {
 
 .btn__update {
     margin: 20px 0;
-    position: absolute;
-    top: 56%;
-    right: 16%;
 }
 
 .btn__update--infor {
@@ -194,14 +192,8 @@ input {
     display: none;
 }
 
-.changePassword__show--password {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 54%;
-    left: 34%;
-    font-size: 1.2rem;
-    /* width: 100px; */
+.changePassword__show--password p{
+    margin: 0;
 }
 
 .changePassword__show--password  input {
@@ -224,7 +216,6 @@ table {
     border-collapse: collapse;
     width: 100%;
     font-family: Arial, sans-serif;
-    margin: 20px 30px 80px 30px;
 }
 
 th, td {
@@ -243,35 +234,16 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-h1 {
-    text-align: center;
-    margin-top: 30px;
-}
+
 
 #dataContainer {
     margin-top: 20px;
-}
-
-.managerAccount__search {
-    margin-left: 2.5%;
 }
 
 .managerAccount__search input {
     background-color: #fff;
 }
 
-.managerAccount__search div:nth-child(2) {
-    position: absolute;
-    top: 45.1%;
-    left: 87.26%;
-    font-size: 1.2rem;
-    /* padding: 5px 5px 8px 12px; */
-    padding: 6px 14px;
-    border-radius: 5px;
-    background-color: #ccc;
-    cursor: pointer;
-
-}
 
 .managerAccount__search i:hover {
     /* background-color: #ccc; */
@@ -349,15 +321,10 @@ h1 {
 .Admin__change--user {
     position: absolute;
     top: 0;
-    padding-left: 300px;
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 80%;
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    width: 96%;
     height: 100%;
     display: none;
-}
-
-#admin__update--account {
-    margin: 20px 0 40px 0;
 }
 
 #close__admin--change__user {
@@ -387,10 +354,10 @@ h1 {
 }
 
 .btn__Admin--update__user {
-    margin: 20px 0;
+    /* margin: 20px 0;
     position: absolute;
     top: 80%;
-    right: 13.6%;
+    right: 13.6%; */
 }
 
 .btnAdmin__update--infor {
@@ -415,28 +382,23 @@ h1 {
 }
 .class_heading,
 .classRoom_heading   {
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    padding-left: 330px;
+    padding-left: 330px; */
 }
 .classRoom_heading h1{
-    border-bottom: 3px solid #33B5E5;
     width: 98%;
     text-align: left;
     padding: 10px;
 }
 .seach_name_classRoom{
-    position: absolute;
-    top: 18%;
-    left: 25%;
-    width: 68%;
+    width: 60%;
+    padding: 10px;
     height: 3%;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 .seach_icon_classRoom{
-    position: absolute;
-    top: 20%;
-    left: 91.8%;
     padding: 8px;
     background-color: #00C4CC;
     border-radius: 20px;
@@ -446,13 +408,7 @@ h1 {
 }
 #classRoom_table_container{
     border: 1px solid black;
-    max-height: 500px ;
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: absolute;
-    top: 30%;
-    left: 25%; 
-    width: 72%;
+    max-height: 400px ;
     height: 50%;
     display: none;
 }
@@ -468,9 +424,6 @@ h1 {
     display: none;
 }
 .add_classRoom_button{
-    /* position: absolute; */
-    margin: -5% 5% 0% 0;
-    float: right;
     padding: 10px 15px;
     background-color: #00c4cc;
     border-radius: 10px;
@@ -563,12 +516,7 @@ td .classRoom_delete_button{
 .add_class{
     display: none;
 }
-.add__class--button{
-    position: absolute;
-    right: 4%;
-    bottom: 3%;
-    margin-bottom: 20px;
-}
+
 #add__class--button{
     padding: 10px 15px;
     background-color: #00c4cc;
@@ -596,15 +544,6 @@ td .classRoom_delete_button{
 .class_table_container{
     border: 1px solid black;
     max-height: 400px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: absolute;
-    top: 30%;
-    left: 25%;
-    width: 70%;
-}
-#search_table--managerClass{
-    width: 95%;
 }
 .add_class--icon{
     color: #29a329;
@@ -615,39 +554,27 @@ td .classRoom_delete_button{
 }
 
 /* Manager Schedule */
-
-.Schedule {
-    position: absolute;
-    top: 0;
-    left:  20%;
+.Schedule{
     display: none;
 }
-
-.schedule__body {
-    display: flex;
-    flex-direction: column;
+.btn_schedule  button{
+    margin-right: 5px;
+    padding: 5px;
 }
-
-.schedule__title {
-    /* width: 26%; */
-}
-
 .schedule__title h1 {
     border-bottom: 3px solid #33B5E5;
     width: 98%;
     text-align: left;
-    padding: 10px;
+    padding: 15px;
 }
 
 .input_schedule {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .input_schedule input {
-    width: 60%;
-    margin: 60px 20px;
-    /* color: #fff; */
-    /* background-color: #3399CC; */
+    width: 40%;
 }
 
 .schedule__body--item {
@@ -655,9 +582,7 @@ td .classRoom_delete_button{
 }
 
 .schedule__body--item button {
-    margin: 60px 20px;
     width: 100px;
-    height: 40px;
     font-size: 1rem;
     font-weight: 400;
     cursor: pointer;
@@ -680,13 +605,11 @@ td .classRoom_delete_button{
 
 #table__class--schedule {
     padding: 0 20px;
-    height: 700px;
+    height: 500px;
 }
 
 #close__select--class {
-    position: absolute;
-    font-size: 2rem;
-    left: 30%;
+    font-size: 1.2rem;
     padding: 10px;
     cursor: pointer;
 }
@@ -694,39 +617,34 @@ td .classRoom_delete_button{
 /* Select phòng học cho thuật toán  */
 
 #close__select--classroom {
-    position: absolute;
-    font-size: 2rem;
-    left: 30%;
-    padding: 10px;
+    font-size: 1.2rem;
+    padding: 5px;
     cursor: pointer;
 }
 
 #table__classroom--schedule {
     padding: 0 20px;
-    height: 700px;
+    height: 500px;
 }
 
 
 /* Select môn học cho thuật toán  */
 
 #close__select--subject {
-    position: absolute;
-    font-size: 2rem;
-    left: 30%;
+    font-size: 1.2rem;
     padding: 10px;
     cursor: pointer;
 }
 
 #table__subject--schedule {
     padding: 0 20px;
-    height: 700px;
+    height: 500px;
 }
 
 
 /*  */
 
 .striped-table {
-    width: 97%;
     border-collapse: collapse;
     text-align: center;
 }
@@ -734,7 +652,7 @@ td .classRoom_delete_button{
 .striped-table th,
 .striped-table td {
     border: 1px solid #dddddd;
-    padding: 8px;
+    padding: 4px;
     text-align: center;
 }
 
@@ -752,30 +670,20 @@ td .classRoom_delete_button{
 .management_Schedule {
     display: none;
 }
-.Schedule_heading h1{
-    width: 20%;
-    text-align: left;
-    margin-top: 30px;
-    margin-top: 0;
-    padding-bottom: 5px;
-    border-bottom: 3px solid #00c4cc;
-    position: absolute;
-    top: 5%;
-    left: 25%;
-    width: 15%;
+.class_searching--button,
+.Schedule_searching--button{
+    background-color: #00C4CC;
+    padding: 5.5px;
 }
 .seach_name_Schedule{
-    position: absolute;
-    top: 18%;
-    left: 25%;
     width: 68%;
+    padding: 10px;
     height: 3%;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    /* border: ; */
 }
 .seach_icon_Schedule{
-    position: absolute;
-    top: 20%;
-    left: 91.8%;
     padding: 8px;
     background-color: #00C4CC;
     border-radius: 20px;
@@ -783,12 +691,6 @@ td .classRoom_delete_button{
 .seach_icon_Schedule:hover{
     opacity: 0.6;
 }
-.Schedule__button--add{
-    position: absolute;
-    right: 6%;
-    bottom: 8%;
-}
-
 #IsSignUp_Schedule_button,
 #IsUnSignUp_Schedule_button,
 #add_Schedule_button{
@@ -798,15 +700,11 @@ td .classRoom_delete_button{
 }
 
 .Schedule_table_container{
-    width: 75%;
-    position: absolute;
-    top: 28%;
-    left: 22%;
-    display: block;
+
     border: 1px solid black;
     max-height: 400px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
 }
 /* manager Subject */
 
@@ -882,24 +780,65 @@ td .classRoom_delete_button{
 .schedule__body--allNotUser {
     border: 1px solid black;
     max-height: 400px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
 }
 
 #table__Subject--full {
     border: 1px solid black;
-    max-height: 500px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin-left: 100px;
-    padding-right: 30px;
+    max-height: 400px;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
 }
 
 #table__Account--full {
     border: 1px solid black;
     max-height: 500px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin-left: 50px;
+    /* overflow-y: auto;
+    overflow-x: hidden; */
+
 }
 
+.stt-column {
+    width: 40px; /* Hoặc bất kỳ độ rộng nào bạn muốn */
+    text-align: center; /* Để căn giữa nội dung */
+}
+.description-cell {
+    max-width: 150px; /* Đặt chiều rộng tối đa cho ô mô tả */
+    white-space: nowrap; /* Không xuống dòng */
+    overflow: hidden; /* Ẩn nội dung tràn */
+    text-overflow: ellipsis; /* Hiển thị dấu chấm lửng */
+    cursor: pointer; /* Đặt con trỏ chuột thành con trỏ nhấp chuột */
+}
+
+.description-cell.expanded {
+    white-space: normal; /* Cho phép xuống dòng khi mở rộng */
+    overflow: visible; /* Hiển thị toàn bộ nội dung */
+}
+.close_navbar--icon i{
+    color: #fff;
+    padding: 20px;
+}
+@media screen and (min-width: 1025px){
+    .navbar_container{
+       width: 90%;    
+    }
+}
+
+@media screen and (max-width: 768px){
+    .navbar_container{
+        position: fixed;
+        top: 0;
+        left: -70%; 
+        width: 70%; 
+        height: 100%;
+        /* background-color: #fff;  */
+        transition: left 0.3s ease; 
+        z-index: 1000; 
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); 
+    }
+    .navbar_container.active {
+        left: 0;
+        display: block !important;
+    }
+}
